<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg2"
    android:id="@+id/drawerLayout"
    tools:openDrawer="start"
    >
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:id="@+id/navigationview"
        app:headerLayout="@layout/header_lay"
        app:menu="@menu/navigation_items"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:padding="15dp"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="-3dp"
                    android:layout_marginTop="7dp"
                    android:padding="15dp"
                    android:src="@drawable/baseline_search_24" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="170dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/card3">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="Expand"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/app_name"
                        android:padding="25dp"
                        android:textColor="#715E15 "
                        android:text="@string/medical"
                        android:textSize="30sp" />
                </RelativeLayout>
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/doctor"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/card3">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="Expand"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/app_name"
                        android:padding="25dp"
                        android:textColor="#715E15 "
                        android:text="@string/skill_and_dev"
                        android:textSize="30sp"/>
                </RelativeLayout>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/skill"
                    android:layout_marginTop="6dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/card3">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="Expand"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/app_name"
                        android:padding="25dp"
                        android:textColor="#715E15 "
                        android:text="@string/vocation"
                        android:textSize="30sp" />
                </RelativeLayout>
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/vocational"
                    android:layout_marginTop="-15dp"
                    android:layout_alignParentRight="true"/>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/card3">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="Expand"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/app_name"
                        android:padding="25dp"
                        android:text="@string/design"
                        android:textColor="#715E15 "
                        android:textSize="30sp" />
                </RelativeLayout>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/designer"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"/>



            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/card3">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="Expand"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/app_name"
                        android:padding="25dp"
                        android:textColor="#715E15 "
                        android:text="@string/communication"
                        android:textSize="30sp" />
                </RelativeLayout>
                <ImageView
                    android:layout_width="122dp"
                    android:layout_height="122dp"
                    android:src="@drawable/communication"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/card3">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="Expand"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/app_name"
                        android:padding="25dp"
                        android:textColor="#715E15 "
                        android:text="@string/psychology"
                        android:textSize="30sp" />
                </RelativeLayout>
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/psychology"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <!--        <RelativeLayout-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="190dp">-->
            <!--            <RelativeLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="150dp"-->
            <!--                android:layout_marginTop="25dp"-->
            <!--                android:layout_marginStart="20dp"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:layout_marginEnd="20dp"-->
            <!--                android:layout_marginRight="20dp"-->
            <!--                android:layout_marginBottom="20dp"-->
            <!--                android:background="@drawable/card3">-->

            <!--            <Button-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_alignParentBottom="true"-->
            <!--                android:layout_marginBottom="2dp"-->
            <!--                android:background="#00000000"-->
            <!--                android:padding="20dp"-->
            <!--                android:text="Expand" -->
            <!--                android:textColor="@color/black"/>-->

            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:fontFamily="@string/app_name"-->
            <!--                android:padding="25dp"-->
            <!--                android:text="@string/app_name"-->
            <!--                android:textColor="#715E15 "-->
            <!--                android:textSize="30sp" />-->
            <!--            </RelativeLayout>-->
            <!--            <ImageView-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="150dp"-->
            <!--                android:src="@drawable/designer"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:layout_alignParentRight="true"/>-->
            <!--        </RelativeLayout>-->


        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>